Bug 1544997 - Propogate cubeb stream error to AudioSink to handle loss of audio device.  r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D47745