dom/media/AudioStream.h
@@ -201,6 +201,8 @@ class AudioStream final
     virtual bool Ended() const = 0;
     // Notify that all data is drained by the AudioStream.
     virtual void Drained() = 0;
+    // Notify that a fatal error has occured during playback.
+    virtual void Errored() = 0;
 
    protected:
     virtual ~DataSource() = default;
