dom/media/mediasink/AudioSink.cpp
@@ -301,6 +301,12 @@ void AudioSink::Drained() {
   mEndedPromise.ResolveIfExists(true, __func__);
 }
 
+void AudioSink::Errored() {
+  SINK_LOG("Errored");
+  mPlaybackComplete = true;
+  mEndedPromise.Reject(NS_ERROR_FAILURE, __func__);
+}
+
 void AudioSink::CheckIsAudible(const AudioData* aData) {
   MOZ_ASSERT(aData);
 
